[package]
name = "elevenlabs_ttm"
version = "0.0.2"
edition = "2024"
description = "Type-safe Rust client for ElevenLabs Text-to-Music API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hamzaelmarjani/elevenlabs_ttm"
keywords = [
    "elevenlabs",
    "elevenlabs_ttm",
    "elevenlabs_api",
    "elevenlabs_rs",
    "text-to-music",
]
categories = ["api-bindings", "multimedia::audio", "network-programming"]

[dependencies]
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
chrono = "0.4.41"

[dev-dependencies]
tokio-test = "0.4.4"

[[example]]
name = "basic_ttm"
required-features = []

[[example]]
name = "advanced_ttm"
required-features = []
